// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package repair;

// InjuredSegment is the queue item used for the data repair queue
message InjuredSegment {
    string path = 1;
    repeated int32 lost_pieces = 2;
}

//IdentifyRequest is a request message for the identifyInjuredSegments private method
message IdentifyRequest {
    string prefix = 1;
    string first = 2;
    bool recurse = 3;
    bool reverse = 4;
    int32 limit = 5;
}